2003-04-01  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/syntheth.c (synth_eth_init): Set the flag IFF_ALLMULTI when
	the underlying device supports multicast so eth_drv correctly sets
	mutlicast filtering.  
	* cdl/syntheth.cdl: This driver implements multicast.

2003-02-25  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/syntheth.sgml: Declare as <part> not <reference> to get
	correct TOC numbering.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/syntheth.cdl: Add doc link.

	* doc/syntheth.sgml: Comment out DOCTYPE for now to allow building
	with standard doc build.
	Add an enclosing <reference> so it's structured better with standard
	doc build.

2003-02-13  Bart Veer  <bartv@ecoscentric.com>

	* src/syntheth.c, cdl/syntheth.cdl: add dependency on errno.h for
	error codes, and avoid memset() warning

2003-02-12  Bart Veer  <bartv@ecoscentric.com>

	* host/Makefile.in, host/configure:
	Regenerate after toplevel acinclude.m4 update

2003-02-12  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/syntheth.cdl (CYGPKG_DEVS_ETH_ECOSYNTH_CFLAGS_ADD):
	Define -D_KERNEL -D__ECOS in line with other drivers. Fixes build
	issue with freeBSD stack.

2002-09-25  Bart Veer  <bartv@ecoscentric.com>

	* host/configure.in, host/rawether.c, doc/syntheth.sgml: 
	Only support the tap device if running a recent Linux kernel

2002-09-22  Bart Veer  <bartv@ecoscentric.com>

	* host/configure.in:
	Remove Tcl-related checks, the ethernet package only requires
	the functionality of the architectural HAL support

2002-08-07  Bart Veer  <bartv@ecoscentric.com>

	* synthetic target ethernet driver package created

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 2002, 2003 Bart Veer
//
// eCos is free software; you can redistribute it and/or modify it under